--- a/src/scripts/docker-compose.yml
+++ b/src/scripts/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       MYSQL_PASSWORD: ACfGZ0z28TWQ             # normal user password
     volumes:
       - ./mysql_data:/var/lib/mysql          # persist data
-      - ./scripts/schema.sql:/docker-entrypoint-initdb.d/schema.sql
-      - ./scripts/seed.sql:/docker-entrypoint-initdb.d/seed.sql
+      # - ./scripts/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      # - ./scripts/seed.sql:/docker-entrypoint-initdb.d/seed.sql
     ports:
       - "3307:3306"                          # access from host
 
